src/test/resources/testcases/invalid/control/continue_outside_loop.tc
int main() {
    int x = 1;
    while (x > 0) {
        x = x - 1;
    }
    continue; // Error: continue outside loop
    return 0;
}
